--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -12,6 +12,47 @@
     z-index: 10;
 }
 
+.topnav-links-container {
+    display: inline-block;
+    font-size: 15px;
+    font-family: "San Francisco";
+    a {
+        transition: all .2s;
+        padding-right: 12px;
+        text-decoration: none;
+        color: #287EBB;
+        &:hover {
+            opacity: .6;
+        }
+    }
+    @media (max-width: $breakpoint-nav) {
+        position: absolute;
+        display: none;
+        top: 80px;
+        right: 20px;
+        width: auto;
+        padding: 0 30px 20px 30px;
+        background-color: white;
+        a {
+            padding-right: 0;
+            display: block;
+            line-height: 1.6;
+            font-size: 16px;
+            color: $color-main-font;
+            font-family: "San Francisco Bold";
+        }
+    }
+}
+
+.topnav-links__mobile-button {
+    font-size: 22px !important;
+    margin-left: 10px;
+    display: none !important;
+    @media (max-width: $breakpoint-nav) {
+        display: inline-block !important;
+    }
+}
+
 .topnav-logo {
     position: absolute;
     left: 20px;
