--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -11,6 +11,7 @@ $breakpoint-new-phone: 420px;
 $breakpoint-air: 1291px;
 $breakpoint-700: 700px;
 $breakpoint-800: 800px;
+$breakpoint-nav: 900px;
 $breakpoint-950: 950px;
 $breakpoint-1080: 1080px;
 $breakpoint-big-tablet: 1118px;
